# static-video-server

./: Cargo.toml  Dockerfile  README.md
assets/: index.css  index.js
src/: lib.rs  main.rs
templates/: index.html
