[package]
name = "video-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = "0.6.1"
axum-macros = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = "0.7.4"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
