[package]
name = "static-video-server"
version = "0.1.0"
edition = "2021"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
description = "A simple static video file server."
keywords = ["file-server", "video-server"]
license-file = "LICENSE.md"
documentation = "https://docs.rs/static-video-server/0.1.0/static-video-server"
homepage = "https://github.com/aalekhpatel07/static-video-server"
repository = "https://github.com/aalekhpatel07/static-video-server"
readme = "README.md"

[dependencies]
askama = "0.11.1"
axum = "0.6.1"
axum-macros = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = "0.7.4"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
